# RubinsForge

./: .gitignore  01_lens_simulation_1412.py  02_lens_masking _1912.py  Part_1_Targets.ipynb  Part_2_OpSim.ipynb  README.md  cutouts.py  lenscollect.py  lsst_lens_121424.py  read_lens.py  streak.py  streaks.py
LenSim/: .gitignore
LenSim/scripts/: GGSL_Sim_ver1.py  GGSL_Sim_ver2.py  GGSL_Sim_ver3.py  modelling_of_catalogue_data.ipynb  relations.py  simulation_api.ipynb  substructure_challenge_simple_example.ipynb
OpSim/scripts/: OpSim_Tutorial.ipynb  OpSim_tutorial.ipynb  read_lenses.ipynb  sim.py
Skyfield/: .gitignore  __init__.py  brightness.py  pyproject.toml  simple_sat.py  skyfield_101224_check_targets.py  skyfield_101224_check_targets_starsm.py  skyfield_101224_plots.py  skyfield_101224_plots_daybyday.py  skyfield_101224_plots_total.py  skyfield_101224_positions_and_contamination.py  skyfield_101224_positions_and_contamination_final_ver2.py  skyfield_101224_positions_and_contamination_final_ver3.py  skyfield_101224_positions_and_contamination_final_ver4.1.1.py  skyfield_101224_positions_and_contamination_final_ver4.1.2.py  skyfield_101224_positions_and_contamination_final_ver4.1.py  skyfield_101224_positions_and_contamination_final_ver4.2 .2.py  skyfield_101224_positions_and_contamination_final_ver4.2.1.py  skyfield_101224_positions_and_contamination_final_ver4.2.py  skyfield_101224_positions_and_contamination_final_ver4.py  skyfield_101224_positions_and_contamination_final_ver5.py  skyfield_101224_positions_and_contamination_simplesat.py  skyfield_101224_positions_and_contamination_targetpos.py  skyfield_101224_positions_and_contamination_targetpos_funct.py  skyfield_231124_plots.py  skyfield_231124_satellite_positions_and_contamination.py  skyfield_231124_satellite_positions_and_contamination_2.py  skyfield_231124_satellite_positions_and_contamination_3.py  targets.py  targets_master.py  targets_random.py  weekly_TLE.py
Skyfield/scripts/: satellite_path.ipynb  skyfield_sim.py  skyfield_sim_new _optimized.py  skyfield_sim_new.py
Skyfield/src/: __init__.py
Skyfield/src/satellites/: __init__.py  starlink_sat.py  starlink_v1p5.py
Skyfield/src/tracking/: __init__.py  exposure_tracker.py  satellite_tracker.py  target_tracker.py
Skyfield/src/utils/: calculations.py  plots.py  utils.py
TLE_data/: starlinks_01.29.txt
